# steganography

./: .env.example  .gitignore  README.md  cli.py  config.py  pyproject.toml  registry.py  requirements-dev.txt  requirements.txt  ruff.toml
core/: analyzer.py  carrier.py  crypto.py  payload.py  result.py
docs/superpowers/plans/: 2026-05-23-steganography.md
docs/superpowers/specs/: 2026-05-23-steganography-design.md
modules/: ai_provider_nim.py  ai_triage.py  audio_wav.py  filestruct_appended.py  filestruct_exif.py  image_jpeg.py  image_lsb.py  signatures.py  text_whitespace.py  text_zerowidth.py
report/: report.py
tests/: conftest.py  test_ai_provider_nim.py  test_ai_triage.py  test_analyzer_abc.py  test_audio_wav.py  test_banner.py  test_carrier_abc.py  test_cli.py  test_config.py  test_crypto.py  test_filestruct_appended.py  test_filestruct_exif.py  test_image_jpeg.py  test_image_lsb.py  test_integration_roundtrip.py  test_payload.py  test_registry.py  test_report.py  test_result.py  test_signatures.py  test_text_whitespace.py  test_text_zerowidth.py
ui/: banner.py
